Bugfix for graph on mobile

--- a/src/app/component/graph/force-directed/force-directed.component.scss
+++ b/src/app/component/graph/force-directed/force-directed.component.scss
@@ -2,6 +2,7 @@ figure {
   margin: 0;
   padding: 0;
   height: 70vh;
+  user-select: none;
 }
 
 pre {
